# invenio-userprofiles

./: .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  pyproject.toml  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml
.tx/: config
docs/: api.rst  conf.py  configuration.rst  index.rst
invenio_userprofiles/: __init__.py  api.py  config.py  ext.py  forms.py  models.py  validators.py  views.py
invenio_userprofiles/alembic/: 41157f1933d6_remove_table.py  71634726ec7e_create_userprofiles_branch.py  c25ef2c50ffa_create_userprofiles_tables.py
invenio_userprofiles/templates/invenio_userprofiles/: register_user.html
invenio_userprofiles/templates/invenio_userprofiles/settings/: _macros.html  base.html  profile.html
invenio_userprofiles/templates/semantic-ui/invenio_userprofiles/: register_user.html
invenio_userprofiles/templates/semantic-ui/invenio_userprofiles/settings/: _macros.html  profile.html
tests/: conftest.py  helpers.py  test_api.py  test_forms.py  test_invenio_userprofile.py  test_models.py  test_validators.py  test_views.py
